<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_dark">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/background_dark">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/topBar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingHorizontal="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_title_a"
                        android:textColor="@color/secondary_text_color"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_title_b"
                        android:textColor="@color/primary_text_color"
                        android:textSize="18sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mainLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.viewpager.widget.ViewPager
                        android:id="@+id/featuredCocktailsViewPager"
                        android:layout_width="match_parent"
                        android:layout_height="150dp" />

                    <com.migualador.cocktails.presentation.home.DotsView
                        android:id="@+id/dotsView"
                        android:layout_width="match_parent"
                        android:layout_height="20dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp">

                        <TextView
                            android:id="@+id/alcoholicCocktailsTextView"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:text="@string/home_alcoholic_cocktails"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/alcoholicCocktailsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


                        <TextView
                            android:id="@+id/nonAlcoholicCocktailsTextView"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical"
                            android:text="@string/home_non_alcoholic_cocktails"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/nonAlcoholicCocktailsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


                        <TextView
                            android:id="@+id/favoriteCocktailsTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/home_favorite_cocktails"
                            android:textColor="@color/secondary_text_color"
                            android:textSize="14sp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/favoriteCocktailsRecyclerView"
                            android:layout_width="match_parent"
                            android:layout_height="190dp"
                            android:layout_marginBottom="32dp"
                            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


                        <androidx.cardview.widget.CardView
                            android:id="@+id/favoriteCocktailsCardView"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="32dp"
                            android:backgroundTint="#444746"
                            android:visibility="gone"
                            card_view:cardCornerRadius="6dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/home_favorites_empty"
                                android:textColor="#FFFFFF"
                                android:textSize="12sp" />
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:indeterminateTint="@color/progress_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>